@@ -4173,4 +4173,6 @@ backtracking verbs. --/
 
 "(?J:(?|(?'R')(\k'R')|((?'R'))))"
 
+/(?<=|(\,\$(?73591620449005828816)\xa8.{7}){6}\x09)/
+
 /-- End of testinput2 --/
